Style fixes (#483)
* fixed style issue in actionbar when refs width overflows
* Version 0.6.2
* Updated CHANGELOg.md

--- a/browser/src/main.css
+++ b/browser/src/main.css
@@ -138,6 +138,9 @@ div.appRoot {
 	margin-bottom: 0px;
 	display: flex;
 	justify-content: flex-end;
+}
+
+.log-entry .media-image > div.buttons > div {
 	background-color: var(--vscode-scrollbarSlider-background);
 	padding: .3em .5em .3em 0em;
 	font-size: 75%;
